crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__chemical_composition-12.snap
---
source: polychem/src/atoms/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    Some(
        (
            Remove,
            2,
            "Proton",
        ),
    ),
)
