crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__chemical_composition-14.snap
---
source: polychem/src/atoms/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            2,
        ),
    ],
    None,
)
