crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__chemical_composition-4.snap
---
source: polychem/src/atoms/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Sodium",
            1,
        ),
    ],
    Some(
        (
            Remove,
            1,
            "Electron",
        ),
    ),
)
