crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__chemical_composition-6.snap
---
source: polychem/src/atoms/chemical_composition.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chromium",
            2,
        ),
        (
            "Oxygen",
            7,
        ),
    ],
    Some(
        (
            Add,
            2,
            "Electron",
        ),
    ),
)
