crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_errors-12.snap
---
source: polychem/src/atoms/chemical_composition.rs
description: "chemical_composition(\"[10H2O\")"
expression: out
---
  × expected a chemical formula (optionally followed by a '+' or '-' and a
  │ particle offset), or a standalone particle offset
  ├─▶   × expected an element (like Au) or an isotope (like [15N]) optionally
  │     │ followed by a number
  │   
  ╰─▶   × expected ']' to close isotope brackets
        help: you've probably forgotten to close an earlier '[' bracket
      
   ╭────
 1 │ [10H2O 
   ·     ▲
   ·     ╰── expected ']'
   ╰────
